--- a/style.css
+++ b/style.css
@@ -4,20 +4,20 @@
 }
 
 body {
-    background-color: gray;
+    background-color: #2c3e50;
 }
 
 header {
-    /* background-color: gray; */
-    padding: 2rem;
+    display: grid;
+    place-items: center;
 }
 
 .container {
-    width: 50rem;
+    max-width: 60rem;
     margin: 2rem auto;
     padding: 2rem;
     /* height: 100vh; */
-    border: 0.1rem solid rgb(53, 53, 53);
+    border: 0.1rem solid rgb(150, 150, 150);
     border-radius: 1rem;
 }
 
@@ -28,6 +28,7 @@ header {
 #addEntry {
     padding: 0.5rem 1rem;
     background-color: rgba(0, 18, 184, 0.333);
+    color: #fff;
     cursor: pointer;
     border-radius: 0.5rem;
     border: none;
@@ -49,12 +50,13 @@ header {
     cursor: pointer;
 }
 
-@media (max-width: 800px) {
+
+/* @media (max-width: 800px) {
     .container {
         width: 35rem;
         margin: 2rem auto;
         padding: 2rem;
-        /* height: 100vh; */
+        
         border: 0.1rem solid rgb(53, 53, 53);
         border-radius: 1rem;
     }
@@ -65,8 +67,8 @@ header {
         width: 15.5rem;
         margin: 2rem auto;
         padding: 2rem;
-        /* height: 100vh; */
+        
         border: 0.1rem solid rgb(53, 53, 53);
         border-radius: 1rem;
     }
-}
+} */
