--- a/style.css
+++ b/style.css
@@ -1,3 +1,4 @@
+@import url('https://fonts.googleapis.com/css2?family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&family=Roboto:ital,wght@0,100;0,300;0,400;0,500;0,700;0,900;1,100;1,300;1,400;1,500;1,700;1,900&display=swap');
 * {
     padding: 0;
     margin: 0;
@@ -5,6 +6,7 @@
 
 body {
     background-color: #2c3e50;
+    font-family: 'Poppins', sans-serif;
 }
 
 header {
@@ -16,7 +18,6 @@ header {
     max-width: 60rem;
     margin: 2rem auto;
     padding: 2rem;
-    /* height: 100vh; */
     border: 0.1rem solid rgb(150, 150, 150);
     border-radius: 1rem;
 }
@@ -39,7 +40,6 @@ header {
 }
 
 #inputField {
-    /* background-color: red; */
     border: 0.1rem solid black;
     border-radius: 0.5rem;
     padding: 0.35rem;
@@ -49,26 +49,3 @@ header {
     border: 0.1rem solid rgb(214, 81, 81);
     cursor: pointer;
 }
-
-
-/* @media (max-width: 800px) {
-    .container {
-        width: 35rem;
-        margin: 2rem auto;
-        padding: 2rem;
-        
-        border: 0.1rem solid rgb(53, 53, 53);
-        border-radius: 1rem;
-    }
-}
-
-@media (max-width: 500px) {
-    .container {
-        width: 15.5rem;
-        margin: 2rem auto;
-        padding: 2rem;
-        
-        border: 0.1rem solid rgb(53, 53, 53);
-        border-radius: 1rem;
-    }
-} */
